# shvulkan

./: .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  CMakePresets.json.in  README.md  debian-install.sh  flake.nix  pipeline.nix  result  result-dev  shvulkan.kdev4
.github/workflows/: test.yaml
.kdev4/: shvulkan.kdev4
.shci/: linux-log.md  windows-log.md
.shci/linux/: build-output.txt  build.sh  info.txt  log.md  prerequisites-output.txt  prerequisites.sh
.shci/windows/: build-output.txt  build.bat  info.txt  log.md  prerequisites-output.txt  prerequisites.bat
ShVulkan/include/: shVkCore.h  shVkDrawLoop.h  shVkMemoryInfo.h  shVkPipelineData.h  shVkVersion.h
ShVulkan/include/shvulkan/: shVkCheck.h  shVkCore.h  shVkDrawLoop.h  shVkMemoryInfo.h  shVkPipelineData.h
ShVulkan/src/: shVkCheck.c  shVkCore.c  shVkDrawLoop.c  shVkMemoryInfo.c  shVkPipelineData.c
ShVulkan/src/shvulkan/: shVkCheck.c  shVkCore.c  shVkDrawLoop.c  shVkMemoryInfo.c  shVkPipelineData.c
ShVulkanExample/src/: shVulkanExample.c
docs/: Doxyfile  Doxyfile.in  custom.css  header.html  shvulkan-docs.cmake
docs/docs/html/: README_8md.html  annotated.html  annotated_dup.js  build_8md.html  classes.html  clear__color__example_8md.html  compute__example_8md.html  dir_094cdc85b9a92a399939e4cc51e18eea.html  dir_094cdc85b9a92a399939e4cc51e18eea.js  dir_10789972245f5c80e51f025284adfc41.html  dir_10789972245f5c80e51f025284adfc41.js  dir_239c999c88d56158f0eb18b634e30a18.html  dir_248832ff8517b5b7d5da1a6bc8750d99.html  dir_6cdfa0f715bfd10d7d13766ec6223bc4.html  dir_6cdfa0f715bfd10d7d13766ec6223bc4.js  dir_aed01192c04d12aa3474445d801c4af4.html  dir_e5b66ad0e23d4c6005677875a27b21ad.html  dir_e5b66ad0e23d4c6005677875a27b21ad.js  doxygen_crawl.html  files.html  files_dup.js  functions.html  functions_vars.html  globals.html  globals_defs.html  globals_enum.html  globals_eval.html  globals_func.html  globals_type.html  index.html  linux_2log_8md.html  md__2home_2sinho_2Desktop_2Github_2shvulkan_2_8shci_2linux_2log.html  md__2home_2sinho_2Desktop_2Github_2shvulkan_2_8shci_2windows_2log.html  md_src_2build.html  md_src_2clear__color__example.html  md_src_2compute__example.html  md_src_2scene__example.html  menudata.js  navtreedata.js  navtreeindex0.js  (+11 more)
docs/docs/latex/: README_8md.tex  annotated.tex  build_8md.tex  clear__color__example_8md.tex  compute__example_8md.tex  dir_094cdc85b9a92a399939e4cc51e18eea.tex  dir_10789972245f5c80e51f025284adfc41.tex  dir_239c999c88d56158f0eb18b634e30a18.tex  dir_248832ff8517b5b7d5da1a6bc8750d99.tex  dir_6cdfa0f715bfd10d7d13766ec6223bc4.tex  dir_aed01192c04d12aa3474445d801c4af4.tex  dir_e5b66ad0e23d4c6005677875a27b21ad.tex  files.tex  index.tex  linux_2log_8md.tex  md__2home_2sinho_2Desktop_2Github_2shvulkan_2_8shci_2linux_2log.tex  md__2home_2sinho_2Desktop_2Github_2shvulkan_2_8shci_2windows_2log.tex  md_src_2build.tex  md_src_2clear__color__example.tex  md_src_2compute__example.tex  md_src_2scene__example.tex  refman.tex  scene__example_8md.tex  shVulkan_8h.tex  shVulkan_8h_source.tex  structShVkPipeline.tex  structShVkPipelinePool.tex  windows_2log_8md.tex
docs/docs/xml/: Doxyfile.xml  README_8md.xml  build_8md.xml  clear__color__example_8md.xml  compute__example_8md.xml  dir_094cdc85b9a92a399939e4cc51e18eea.xml  dir_10789972245f5c80e51f025284adfc41.xml  dir_239c999c88d56158f0eb18b634e30a18.xml  dir_248832ff8517b5b7d5da1a6bc8750d99.xml  dir_6cdfa0f715bfd10d7d13766ec6223bc4.xml  dir_aed01192c04d12aa3474445d801c4af4.xml  dir_e5b66ad0e23d4c6005677875a27b21ad.xml  index.xml  indexpage.xml  linux_2log_8md.xml  md__2home_2sinho_2Desktop_2Github_2shvulkan_2_8shci_2linux_2log.xml  md__2home_2sinho_2Desktop_2Github_2shvulkan_2_8shci_2windows_2log.xml  md_src_2build.xml  md_src_2clear__color__example.xml  md_src_2compute__example.xml  md_src_2scene__example.xml  scene__example_8md.xml  shVulkan_8h.xml  structShVkPipeline.xml  structShVkPipelinePool.xml  windows_2log_8md.xml
docs/media/: shvulkan compute.drawio  shvulkan graphics.drawio
docs/src/: build.md  clear_color_example.md  compute_example.md  install.md  scene_example.md
examples/: linux_install.sh  shvulkan-examples.cmake
examples/diagrams/: embed.txt  shvulkan compute.drawio  shvulkan graphics.drawio  shvulkan graphics.drawio.html
examples/meshes/: fabric.ply  sphere.ply
examples/shaders/src/: Canvas.frag  Canvas.vert  (+8 more)
examples/src/: computeExample.c  computePhysics.c  graphicsExample.c
nix/: default.nix  pipeline.nix
shvulkan/: shvulkan.cmake  shvulkan.pc.in
(+77 files in other folders)
